# smonitor-i2c-reader

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
docs/: architecture.md  getting-started.md  json-format.md  native-drivers.md  sensor-profiles.md
examples/basic/: CMakeLists.txt
examples/basic/main/: CMakeLists.txt  main.c  profile.json
include/: smonitor_i2c.h
profiles/: ads1115.json  aht20.json  bh1750.json  bmp280.json  ina219.json  mpu6050.json  qmc5883l.json  sht31.json  vl53l0x.json
schema/: smonitor-i2c.schema.json
src/: smonitor_i2c.cpp  smonitor_i2c_bosch.cpp  smonitor_i2c_internal.hpp  smonitor_i2c_native.cpp  smonitor_i2c_profiles.cpp
tools/: validate_profiles.py
